<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.emsense3.Fragments.SettingsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/White">


        <Switch
            android:id="@+id/switch4"
            android:layout_width="wrap_content"
            android:layout_height="12dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView10" />

        <Switch
            android:id="@+id/switch2"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView9" />

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="80dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_language_black_24dp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/settings_language"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView4"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView4"
            app:srcCompat="@drawable/ic_audio_black_24dp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:text="@string/settings_audio"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView5" />

        <Switch
            android:id="@+id/switch1"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView7" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/settings_language_english"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView4" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/settings_notifications"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView6" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView5"
            app:srcCompat="@drawable/ic_notifications_black_24dp" />


        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/settings_theme"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView7" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView6"
            app:srcCompat="@drawable/ic_eye_black_24dp" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/settings_account"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="0dp"
            android:gravity="center"
            android:text="@string/settings_feedback"
            android:textColor="@color/Black"
            android:textSize="16sp"
            app:layout_constraintLeft_toRightOf="@+id/imageView9"
            app:layout_constraintTop_toTopOf="@+id/imageView9" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView7"
            app:srcCompat="@drawable/ic_person_black_24dp" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="24dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            app:srcCompat="@drawable/ic_help_black_24dp" />


    </android.support.constraint.ConstraintLayout>


</FrameLayout>
